--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -128,6 +128,10 @@ jobs:
       - name: Commit and push to main
         run: |
           git checkout main
+          # Restore the newly generated docs
+          rm -rf docs/dev
+          cp -r /tmp/dev-docs-temp docs/dev
+          
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -f docs/dev/
